fixed alignments and color

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -30,10 +30,6 @@ header {
     z-index: 200;
 } 
 
-/* 
-header ul {
-  display: none;
-} */
 
 .nav-pagelinks {
   display: none
@@ -44,6 +40,7 @@ header ul {
     .nav-pagelinks {
       display: block;
     }
+
   
     header ul {
       list-style: none;
@@ -57,24 +54,31 @@ header ul {
     
     header a {
       text-decoration: none;
-      color: #f4f4f4;
+      color: white;
     }
 
     header a:hover {
       text-decoration: none;
-      color: rgb(231, 66, 66);
+      color: #999;
     }
 }
 
 
 .header-after-scroll {
   background: rgb(108,38,29);
+  transition: 500ms;
 }
 
 #logo-after-scroll {
   margin-left: 50%;
-  transform: translateX(-50%)
+  transform: translateX(-50%);
+  transition: 500ms;
 }
+
+#logo-after-scroll div {
+  margin-left: 0px;
+}
+
 
 
 /* #################
@@ -160,33 +164,6 @@ header ul {
 ####################
 ################# */
 
-.copyright {
-  display: none;
-}
-
-@media (min-width: 811px) {
-  .copyright {
-    display: block;
-  }
-}
-
-
-
-
-.copyright-lg {
-  background: black;
-  width: 100%;
-  height: 5vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-@media (min-width: 811px) {
-  .copyright-lg {
-    display: none;
-  }
-}
 
 .other-footer-mentions {
   display: flex;
@@ -212,27 +189,14 @@ header ul {
   margin: 8px;
 }
 
-.legal-rgpd a {
+.legal-link,
+.copyright {
+  padding-top: 10px
+}
+
+.legal a {
   text-decoration: none;
   color: white;
-}
-
-.legal-rgpd {
-  padding: auto;
-}
-
-@media (min-width: 811px) {
-    .legal-rgpd {
-    padding: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding: 0 5vh;
-  }
-}
-
-.legal-link {
-  text-align: center;
 }
 
 
